Mobile Alignment of footer fix

--- a/lightbox/css/client-style.css
+++ b/lightbox/css/client-style.css
@@ -184,12 +184,14 @@ div.xly.xly-popup > div.xly.xly-container > div.xly.xly-row .xly-content .xly-bo
     }
 
     div.xly.xly-popup > div.xly.xly-container > div.xly.xly-row .xly-subscribe label span {
-        margin-left: -3px;
+        display: block;
+        margin-left: 0px;
     }
 
     div.xly.xly-popup [type="checkbox"]:not(:checked), div.xly.xly-popup [type="checkbox"]:checked {
-        top: 3px;
-        position: relative;    
+        float: left;
+        margin-left: -20px;
+        margin-right: 16px;
     }
 
     div.xly.xly-popup > div.xly.xly-container > div.xly.xly-row .xly-footer .xly-item .xly-actions .xly-accept {
